[package]
name = "wcid"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
kube = "0.52.0"
kube-runtime = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
