[package]
name = "wcid"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
serde_json = { version = "1.0.64" }
tokio = { version = "1.0.1", features = ["full"] }
kube = { git = "https://github.com/clux/kube-rs.git" }
kube-runtime = { git = "https://github.com/clux/kube-rs.git" }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["api", "v1_20"] }
http = "0.2.2"
log = "0.4.11"
futures = "0.3.8"
