[package]
name = "wcid"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.37"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.64" }
tokio = { version = "1.0.1", features = ["full"] }
kube = { git = "https://github.com/clux/kube-rs.git", default-features = false }
kube-runtime = { git = "https://github.com/clux/kube-rs.git", default-features = false }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["api", "v1_20"] }
http = "0.2.2"
futures = "0.3.8"
comfy-table = "2.1.0"
clap = "3.0.0-beta.2"

[features]
default = ["native-tls"]
rustls-tls = [ "kube/rustls-tls", "kube-runtime/rustls-tls"]
native-tls = [ "kube/native-tls", "kube-runtime/native-tls"]

